Added base blocks

--- a/templates/base.html
+++ b/templates/base.html
@@ -42,16 +42,23 @@
     <div class="message-container"></div>
     {% endif%}
     <!--/Messages-->
+    
+    {% block page_header %}
+    {% endblock %}
+
 
 
     <!--Main-->
+    {% block content %}
+    {% endblock %}
+
     <!--/Main-->  
 
     <!--Footer-->
     <!--/Footer-->
-
-
-
+    
+    {% block postloadjs %}
+    {% endblock %}
 
   </body>
 </html>
